option(
  'docdir',
    type : 'string',
    value : 'share/doc/canfigger',
    description : 'directory where the documentation should be installed to',
    yield : true
  )
option(
  'build_tests',
    type : 'boolean',
    value : 'true',
    description : 'Build tests'
  )
option(
  'build_examples',
    type : 'boolean',
    value : 'true',
    description : 'Build examples'
  )

